# dancomp

./: .gitignore  Makefile  README  db-init  my-code-files
arc/: 2013-10-06  2013-10-14  2013-10-20  2013-10-29  2013-11-08  2013-11-18  2013-12-02  2013-12-10  2014-01-08  2014-04-25  2014-10-06  2014-12-04  2014-12-19  2015-06-23  2015-07-04  2015-07-10  2015-07-23  2015-10-17  2015-10-28  2016-10-19
c/: Makefile  focusWeb.c  g
hs/adjvol/: adjvol.cabal
hs/adjvol/src/: Main.hs  MainPA.hs  Opt.hs
hs/blankscr/: blankscr.cabal
hs/blankscr/src/: Main.hs
hs/chganal/: chganal.cabal
hs/chganal/src/: Main.hs
hs/dancomp/: dancomp.cabal
hs/dancomp/src/: Dancomp.hs
hs/daninst/: Makefile  README  daninst.cabal
hs/daninst/src/: Main.hs
hs/lk/: lk.cabal
hs/lk/src/: Main.hs
hs/netselect/: netselect.cabal
hs/netselect/src/: Main.hs
hs/randplay/: Makefile  randplay  randplay.cabal
hs/randplay/src/: Main.hs
hs/tmux-multi-group-prune/: tmux-multi-group-prune.cabal
hs/tmux-multi-group-prune/src/: Main.hs
hs/wmv/: wmv.cabal
hs/wmv/src/: Wmv.hs
old-bin/: README  aimPretty.hs  arst  bg_hack  big  btoff  bton  cb  chiad  cnm  cool102  cpl  cppath  d  dhc  diffdirs  do-halved  doNotify  echos  echox  echoxb  echoxd  eo  exer  fce  fr  game  ghc-pkgs  git-active-branches  git-add-untracked  git-archive-branch  git-checkout-clean  git-checkout-master  git-co  git-commit-all  git-diff-master  git-diff-rev-ansidiff  git-ignore-untracked  git-modify-message  git-new-branch  (+53 more)
old-services/astrillvpn/: run
old-services/astrillvpn/log/: run
old-services/openvpn/log/: run
old-services/pulseaudio/: run
old-services/rabid/: run
old-services/rabid/log/: run
old-services/strongvpn/: run
old-services/strongvpn/log/: run
old-services/syncstuff/: run
orig/: README  pc  us
py/wmv/: setup.py  wmv_lib.py
