name:            daninst
version:         0.1
synopsis:        dancomp installer
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
build-depends:   base, containers, directory, filepath, HSH, split, unix
build-type:      Simple

executable:      daninst
main-is:         Main.hs
hs-source-dirs:  src
ghc-options:     -Wall
