name:            lk
version:         0.1
license:         GPL
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        look up (scrabble) words / defs
build-type:      Simple
build-depends:   base >= 4, containers, process

executable:      lk
main-is:         Main.hs
hs-source-dirs:  src
