name:            netselect
version:         0.1
license:         GPL
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        choose network active network interfaces
build-type:      Simple
build-depends:   FUtil, HSH, base >= 4, containers, haskell98

executable:      net
main-is:         Main.hs
hs-source-dirs:  src
