name:            netselect
version:         0.1
license:         GPL
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        choose network active network interfaces
build-type:      Simple

executable:      nets
main-is:         Main.hs
hs-source-dirs:  src
build-depends:   base, process
